--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -32,6 +32,7 @@ body {
     justify-content: center;
     align-items: center; 
     text-align: center;
+    font-weight: bold;
 }
 .card:hover {
     // transform: scale(1.01);
