--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
   <!-- Heading -->
   <div class="heading">
     <h1>Connections</h1>
-    <p>Create groups of four!</p>
+    <p>Create four groups of four!</p>
   </div>
   <br>
 
