--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,4 @@
-body {
+.main {
     font-family: "Inter Tight", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
     "Segoe UI Symbol";
@@ -35,7 +35,7 @@ body {
     font-weight: bold;
 }
 .card:hover {
-    // transform: scale(1.01);
+    transform: scale(1.01);
     cursor: pointer;
 }
 
@@ -44,8 +44,9 @@ body {
 }
 
 .selected {
-    background-color: #aaa;
-}
+    border-color: #000;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  }
 
 /* CSS */
 .button-3 {
