--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,6 @@
    <div class="row" style="width: 20%;">
      <button (click)="shuffleCards()" class="button-3" role="button">Shuffle</button>
      <button (click)="deselectAll()" class="button-3" role="button">Deselect All</button>
-     <button [disabled]="this.selectedCount!=4" (click)="submit()" class="button-3" role="button">Submit</button>
+     <button (click)="submit()" class="button-3" role="button" [disabled]="this.selectedCount!=4">Submit</button>
    </div>
  </div>
