--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,14 +34,15 @@
   
     <!-- Buttons -->
     <br>
-    <div class="row" style="width: 20%;">
+    <div id="buttons" class="row" style="width: 20%;">
       <button (click)="shuffleCards()" class="button-3" role="button">Shuffle</button>
       <button (click)="deselectAll()" class="button-3" role="button">Deselect All</button>
       <button (click)="submit()" class="button-3" role="button" [disabled]="this.selectedCount!=4">Submit</button>
      </div>
   
      <!-- Mistakes -->
-     <div class="row" style="width: 20%;">
+    <br>
+     <div id="mistakes" class="row" style="width: 20%; text-align: center;">
       @if (mistakes == 4) { <p>Mistakes Remaining: X X X X</p> }
       @else if (mistakes == 3) {<p>Mistakes Remaining: X X X</p> }
       @else if (mistakes == 2) {<p>Mistakes Remaining: X X</p> }
