--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -25,9 +25,10 @@
     transition: 0.3s;
     background-color: #bbb;
     border-radius: 10px;
-    height: 120px;
+    height: 100px;
     width: 120px;
-    margin-right: 3%;
+    margin-right: 2%;
+    margin-bottom: 1%;
     display: flex;
     justify-content: center;
     align-items: center; 
@@ -41,6 +42,7 @@
 
 .card:last-child {
     margin-right: 0%;
+    margin-bottom: 0%;
 }
 
 .selected {
@@ -48,3 +50,14 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   }
 
+
+// Mobile Design
+  @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+    .row {
+        width: 100%;
+    }
+
+    #buttons, #mistakes {
+        width: 100% !important;
+    }
+  }
