--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,6 +8,22 @@
     text-align: center;
 }
 
+button {
+    border: 1px solid black;
+    border-radius: 25px;
+    font-family: "Inter Tight", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
+    font-weight: bold;
+    padding: 10px 10px 10px 10px;
+    background-color: white;
+}
+
+button:hover {
+    background-color: #f0f0f0;
+    cursor: pointer;
+}
+
 .row {
     // border: 1px solid black;
     margin: auto;
@@ -59,5 +75,9 @@
 
     #buttons, #mistakes {
         width: 100% !important;
+    }
+
+    .playAgain {
+        width: 0% !important;
     }
   }
