change button color to black

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,6 +17,7 @@ button {
     font-weight: bold;
     padding: 10px 10px 10px 10px;
     background-color: white;
+    color: black;
 }
 
 button:hover {
