--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
     </div>
   }
   <!-- WIN -->
-  @else if (connectionsFound == 4) {
+  @else if (connectionsFound === 4) {
     <div style="text-align: center;">
       <br><br><br><br><br>
       <h2>You Win!</h2>
@@ -42,6 +42,11 @@
             [style.background-color]="cards[i * 4 + j].color"
             [style.color] = "'black'">
             {{cards[i * 4 + j].title}}</div>
+
+            <div class="found" [style.background-color]="cards[i * 4 + j].color">
+              <p>{{cards[i * 4 + j].category}}</p>
+              
+            </div>
           }
         <!-- Card is Not Selected -->
           @else if (!cards[i * 4 + j].selected) {
